--- a/blocks/businesscases/business.html
+++ b/blocks/businesscases/business.html
@@ -124,39 +124,40 @@
     <div class="member-section">
         <h2>Sneha.L.Bagalkot (240)</h2>
         <p>
-            1.overcrowding of tourist places of attraction<br>
+            1.Overcrowding of tourist places of attraction<br>
             2.Inefficient travel and accommodation booking<br>
             3. Transport issue for tourist<br>
         </p><br>
-        <a class="detail" href="../businesscases/Preeti.html">Details</a>
+        <a class="detail" href="../businesscases/Sneha.html">Details</a>
     </div>
 
     <div class="member-section">
         <h2>Disha.S(245)</h2>
         <p>
             1.Inefficient travel and accommodation booking<br>
-            2. Transport issue for tourist<br>
-            3. Economic Inequality Reporting<br>
+            2.Transport issue for tourist<br>
+            3.Managing tourist safety <br>
         </p><br>
-        <a class="detail" href="../businesscases/Priyanka.html">Details</a>
+        <a class="detail" href="../businesscases/Disha.html">Details</a>
     </div>
 
     <div class="member-section">
-        <h2>Shreya (427)</h2>
+        <h2>Prateeksha.S (223)</h2>
         <p>
-            1.Unemployment Rate Calculation<br>
-            2.Job Matching System<br>
+            1.Difficulty in itinerary planning<br>
+            2.Managing tourist safety<br>
+            3.Overcrowding of tourist places of attraction<br>
         </p><br>
-        <a class="detail" href="../businesscases/Shreya.html">Details</a>
+        <a class="detail" href="../businesscases/Prateeksha.html">Details</a>
     </div>
 
      <div class="member-section">
-        <h2>Aishwarya (429)</h2>
+        <h2>Jeevan.H</h2>
         <p>
-            1. Job Matching System<br>
-            2. Job Distribution Optimization<br>
+            1. Difficulty in language<br>
+            2. Transport issue for tourist<br>
         </p><br>
-        <a class="detail" href="../businesscases/AIshwarya.html">Details</a>
+        <a class="detail" href="../businesscases/Jeevan.html">Details</a>
     </div>
 
     <button onclick="window.history.back();">Back</button>
