--- a/index.html
+++ b/index.html
@@ -118,8 +118,8 @@
     <section>
         <h2>City Design</h2>
         <ul>
-            <li><strong>Name of the city:</strong> <span>"AARAMBHA"</span></li>
-            <li>Our city plan for Aarambha, situated in Raichur district in Karnataka, features a well-rounded and sustainable urban design focusing on infrastructure, public services, and environmental conservation.</li>
+            <li><strong>Name of the city:</strong> <span>"HAMSAGARH"</span></li>
+            <li>Our city plan for HAMSAGARH, situated in RAJKOT district in GUJART, features a well-rounded and sustainable urban design focusing on infrastructure, public services,monument preservation and environmental conservation.</li>
             <li>
                 <center>
                     <img src="https://raw.githubusercontent.com/01fe23bcs186/PortfolioDemo.github.io/main/images/City.jpeg" alt="City Plan Image" width="80%">
@@ -143,9 +143,9 @@
         <div>
             <div>
                 <img src="https://raw.githubusercontent.com/01fe23bcs186/PortfolioDemo.github.io/main/images/shreya.jpeg"  class="profile-pic">
-                <p class="name">Shreya Hadikar</p>
-                <p>USN: 01FE23BCS186</p>
-                <p>ROLL NO: 427</p> 
+                <p class="name">Sneha L Bagalkot</p>
+                <p>USN: 01FE23BCS174</p>
+                <p>ROLL NO: 240</p> 
             </div>
         </div>
     </section>
@@ -156,21 +156,21 @@
         </div>
         <div class="team-container">
             <div class="team-member">
-                <img src="https://raw.githubusercontent.com/01fe23bcs182/Priyanka.github.io/main/Images/Preeti (2).jpeg" alt="Team Member 1" class="profile-pic">
+                <img src="https://raw.githubusercontent.com/01fe23bcs187/Disha.github.io/main/Images/Disha (2).jpeg" alt="Team Member 1" class="profile-pic">
                 <div class="member-info">
-                    <p class="name">Preeti </p>
-                    <p>USN: 01FE23BCS154</p>
+                    <p class="name">Disha V Sirsikar </p>
+                    <p>USN: 01FE23BCS187</p>
                      <div class="center-link">
-                          <a href="https://preeti0427.github.io/DAA-portfolio-Preeti/">Click Here to visit Preeti's GitHub Page</a>
+                          <a href="https://preeti0427.github.io/DAA-portfolio-Disha/">Click Here to visit Preeti's GitHub Page</a>
                      </div>
-                    <p>ROLL NO: 423</p>
+                    <p>ROLL NO: 245</p>
                 </div>
             </div>
 
             <div class="team-member">
                 <img src="https://raw.githubusercontent.com/01fe23bcs186/PortfolioDemo.github.io/main/images/priyanka.jpeg" alt="Team Member 2" class="profile-pic">
                 <div class="member-info">
-                    <p class="name">Priyanka Badiger</p>
+                    <p class="name">Pri</p>
                     <p>USN: 01FE23BCS182</p>
                     <div class="center-link">
                           <a href="https://01fe23bcs182.github.io/Priyanka.github.io/">Click Here to visit Priyanka's GitHub Page</a>
