--- a/index.html
+++ b/index.html
@@ -109,9 +109,9 @@
 <body>
     <nav class="navbar">
         <ul class="nav-list">
-            <li><a href="/PortfolioDemo.github.io/blocks/home/home.html">Home</a></li>
-            <li><a href="/PortfolioDemo.github.io/introduction.html">Project Introduction</a></li>
-            <li><a href="/PortfolioDemo.github.io/blocks/learningref/teamlearning.html">Learning Reflections</a></li>
+            <li><a href="/sneha.github.io/blocks/home/home.html">Home</a></li>
+            <li><a href="/sneha.github.io/introduction.html">Project Introduction</a></li>
+            <li><a href="/sneha.github.io/blocks/learningref/teamlearning.html">Learning Reflections</a></li>
         </ul>
     </nav>
 
@@ -122,18 +122,18 @@
             <li>Our city plan for HAMSAGARH, situated in RAJKOT district in GUJART, features a well-rounded and sustainable urban design focusing on infrastructure, public services,monument preservation and environmental conservation.</li>
             <li>
                 <center>
-                    <img src="https://raw.githubusercontent.com/01fe23bcs186/PortfolioDemo.github.io/main/images/City.jpeg" alt="City Plan Image" width="80%">
+                    <img src="https://raw.githubusercontent.com/snehalb2005/PortfolioDemo.github.io/main/images/City.jpeg" alt="City Plan Image" width="80%">
                 </center>
             </li>
         </ul>
         <section class="description">
             <div class="link-section">
-                <a class="custom-link" href="/PortfolioDemo.github.io/introduction.html">Click Here to see the course project introduction</a>
+                <a class="custom-link" href="/sneha.github.io/introduction.html">Click Here to see the course project introduction</a>
             </div>
         </section>
         <section class="description">
             <div class="link-section">
-                <a class="custom-link" href="/PortfolioDemo.github.io/blocks/businesscases/business.html">Click Here to see the business cases</a>
+                <a class="custom-link" href="/sneha.github.io/blocks/businesscases/business.html">Click Here to see the business cases</a>
             </div>
         </section>
         
@@ -142,7 +142,7 @@
     <section>
         <div>
             <div>
-                <img src="https://raw.githubusercontent.com/01fe23bcs186/PortfolioDemo.github.io/main/images/shreya.jpeg"  class="profile-pic">
+                <img src="https://raw.githubusercontent.com/snehalb2005/sneha.github.io/main/images/sneha.jpeg"  class="profile-pic">
                 <p class="name">Sneha L Bagalkot</p>
                 <p>USN: 01FE23BCS174</p>
                 <p>ROLL NO: 240</p> 
@@ -161,7 +161,7 @@
                     <p class="name">Disha V Sirsikar </p>
                     <p>USN: 01FE23BCS187</p>
                      <div class="center-link">
-                          <a href="https://preeti0427.github.io/DAA-portfolio-Disha/">Click Here to visit Preeti's GitHub Page</a>
+                          <a href=https://github.com/Disha0029.io/DAA-portfolio-Disha/">Click Here to visit DISHA's GitHub Page</a>
                      </div>
                     <p>ROLL NO: 245</p>
                 </div>
@@ -170,26 +170,15 @@
             <div class="team-member">
                 <img src="https://raw.githubusercontent.com/01fe23bcs186/PortfolioDemo.github.io/main/images/priyanka.jpeg" alt="Team Member 2" class="profile-pic">
                 <div class="member-info">
-                    <p class="name">Pri</p>
-                    <p>USN: 01FE23BCS182</p>
+                    <p class="name">Prateeksha Shet</p>
+                    <p>USN: 01FE23BCS177</p>
                     <div class="center-link">
-                          <a href="https://01fe23bcs182.github.io/Priyanka.github.io/">Click Here to visit Priyanka's GitHub Page</a>
+                          <a href="https://01fe23bcs182.github.io/.github.io/">Click Here to visit PRATEEKSHA's GitHub Page</a>
                     </div>
-                    <p>ROLL NO: 425</p>
+                    <p>ROLL NO: 223</p>
                 </div>
             </div>
             
-            <div class="team-member">
-                <img src="https://raw.githubusercontent.com/01fe23bcs186/PortfolioDemo.github.io/main/images/aishwarya.jpeg" alt="Team Member 3" class="profile-pic">
-                <div class="member-info">
-                    <p class="name">Aishwarya Talikoti</p>
-                    <p>USN: 01FE23BCS189</p>
-                     <div class="center-link">
-                          <a href="https://01fe23bcs189.github.io/Aishwarya.github.io/">Click Here to visit Aishwarya's GitHub Page</a>
-                    </div>
-                    <p>ROLL NO: 429</p>
-                </div>
-            </div>
 
         </div>
     </section>
