--- a/blocks/businesscases/business.html
+++ b/blocks/businesscases/business.html
@@ -144,20 +144,12 @@
         <h2>Prateeksha.S (223)</h2>
         <p>
             1.Difficulty in itinerary planning<br>
-            2.Managing tourist safety<br>
+            2.difficulty in language <br>
             3.Overcrowding of tourist places of attraction<br>
         </p><br>
         <a class="detail" href="../businesscases/Prateeksha.html">Details</a>
     </div>
 
-     <div class="member-section">
-        <h2>Jeevan.H</h2>
-        <p>
-            1. Difficulty in language<br>
-            2. Transport issue for tourist<br>
-        </p><br>
-        <a class="detail" href="../businesscases/Jeevan.html">Details</a>
-    </div>
 
     <button onclick="window.history.back();">Back</button>
 
