--- a/blocks/businesscases/business.html
+++ b/blocks/businesscases/business.html
@@ -125,7 +125,7 @@
         <p>
             1.Overcrowding of tourist places of attraction<br>
             2.Inefficient travel and accommodation booking<br>
-            3. Transport issue for tourist<br>
+            3. Difficulty in Itinerary Planning<br>
         </p><br>
         <a class="detail" href="../businesscases/Sneha.html">Details</a>
     </div>
