--- a/blocks/businesscases/Sneha.html
+++ b/blocks/businesscases/Sneha.html
@@ -193,9 +193,9 @@
 <body>
   <nav class="navbar">
     <ul class="nav-list">
-      <li><a href="/PortfolioDemo.github.io/blocks/home/home.html">Home</a></li>
-      <li><a href="/PortfolioDemo.github.io/index.html">Project Introduction</a></li>
-      <li><a href="/PortfolioDemo.github.io/blocks/learningref/teamlearning.html">Learning Reflections</a></li>
+      <li><a href="/sneha.github.io/blocks/home/home.html">Home</a></li>
+      <li><a href="/sneha.github.io/index.html">Project Introduction</a></li>
+      <li><a href="/sneha.github.io/blocks/learningref/teamlearning.html">Learning Reflections</a></li>
     </ul>
   </nav>
 
@@ -203,27 +203,27 @@
     <button onclick="window.history.back();" style="background-color: #00bcd4; color: white; border: none; padding: 10px 20px; font-size: 1rem; cursor: pointer; border-radius: 5px; margin-bottom: 20px;">Back</button>
     <h1 class="main">Business Cases with SDGs</h1>
 
-    <div class="Unemployment Rate Calculation">
-      <h2>Unemployment Rate Calculation</h2>
-      <div class="strategy">
-        <h3>SDG Target 8</h3>
-        <p><strong>Focus:</strong> Decent Work and Economic Growth</p>
-        <p><strong>SDG Indicator 8.5.2:</strong> Unemployment rate, by sex, age, and persons with disabilities.</p>
-      </div>
-    </div>
-
-    <div class="Job Matching System">
-      <h2>Job Matching System</h2>
-      <div class="strategy">
-        <h3>SDG Target 8</h3>
-        <p><strong>Focus:</strong> Decent Work and Economic Growth</p>
-        <p><strong>SDG Indicator 8.6.1:</strong> Proportion of youth not in education, employment, or training (focus on matching jobs to individuals).</p>
-      </div>
-    </div>
+    <div class="Overcrowding of tourist places of attraction">
+  <h2>Overcrowding of tourist places of attraction</h2>
+  <div class="strategy">
+    <h3>SDG Target 8</h3>
+    <p><strong>Focus:</strong> Sustainable Tourism and Responsible Consumption</p>
+    <p><strong>SDG Indicator 8.9.1:</strong> Tourism direct GDP as a proportion of total GDP and in growth rate.</p>
   </div>
+</div>
+
+<div class="Inefficient Travel and Accommodation Bookings">
+  <h2>Inefficient Travel and Accommodation Bookings</h2>
+  <div class="strategy">
+    <h3>SDG Target 8</h3>
+    <p><strong>Focus:</strong> Sustainable Infrastructure Development</p>
+    <p><strong>SDG Indicator 8.2.1:</strong> Annual growth rate of real GDP per employed person.</p>
+  </div>
+</div>
+    
 
   <div class="center-link">
-    <a href="../businesscases/Shreyacode.cpp" class="code">Click Here for Code Implementation</a>
+    <a href="../businesscases/Snehacode.cpp" class="code">Click Here for Code Implementation</a>
   </div>
 </body>
 </html>
