--- a/blocks/learningref/teamlearning.html
+++ b/blocks/learningref/teamlearning.html
@@ -1,1 +1,110 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Learning Reflections</title>
+    <link rel="stylesheet" href="../../teamcase.css">
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f9f9f9; /* Light background for the page */
+            color: #333; /* Dark text for readability */
+            margin: 0;
+            padding: 0;
+        }
+
+        header {
+            background-color: #007BFF; /* Blue background for header */
+            padding: 1rem;
+        }
+
+        .navbar {
+            list-style: none;
+            padding: 0;
+            margin: 0;
+            display: flex;
+            justify-content: center;
+            gap: 2rem;
+        }
+
+        .nav-list li a {
+            text-decoration: none;
+            color: white;
+            font-weight: bold;
+            font-size: 1rem;
+        }
+
+        .nav-list li a:hover {
+            color: #ff5722; /* Orange color on hover for contrast */
+        }
+
+        main {
+            max-width: 1000px;
+            margin: 2rem auto;
+            padding: 2rem;
+            background-color: #ffffff;
+            border-radius: 8px;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+        }
+
+        h1 {
+            text-align: center;
+            color: #007BFF; /* Blue color for headings */
+            font-size: 2.5rem;
+            margin-bottom: 1.5rem;
+        }
+
+        h2 {
+            color: #4b0082; /* Indigo for subheadings */
+            text-align: center;
+            font-size: 1.5rem;
+            margin-bottom: 1rem;
+        }
+
+        .members {
+            display: block;
+            text-align: center;
+            color: #007BFF; /* Blue for the link */
+            font-size: 1.1rem;
+            margin-top: 1rem;
+        }
+
+        .members:hover {
+            text-decoration: underline;
+            color: #ff5722; /* Change to orange on hover */
+        }
+
+        @media (max-width: 768px) {
+            .navbar {
+                flex-direction: column;
+                align-items: center;
+            }
+
+            .nav-list li {
+                margin-bottom: 10px;
+            }
+        }
+    </style>
+</head>
+
+<body>
+    <header>
+        <nav class="navbar">
+            <ul class="nav-list">
+                <li><a href="/sneha.github.io/blocks/home.html">Home</a></li>
+                <li><a href="/sneha.github.io/index.html">Project Introduction</a></li>
+                <li><a href="/sneha.github.io/blocks/learningref/teamlearning.html">Learning Reflections</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+        <h1><strong>Learning Reflections</strong></h1>
+        <h2>Sneha L Bagalkot(240)</h2>
+        <a class="members" href="/sneha.github.io/blocks/learningref/Sneha L Bagalkot(240).html">Click here to see learning outcomes</a>
+    </main>
+</body>
+
+</html>
