--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
     <section>
         <div>
             <div>
-                <img src="https://raw.githubusercontent.com/snehalb2005/sneha.github.io/main/images/govind.jpeg"  class="profile-pic">
+                <img src="https://raw.githubusercontent.com/snehalb2005/sneha.github.io/main/images/sneha.jpeg"  class="profile-pic">
                 <p class="name">Sneha L Bagalkot</p>
                 <p>USN: 01FE23BCS174</p>
                 <p>ROLL NO: 240</p> 
