--- a/blocks/businesscases/business.html
+++ b/blocks/businesscases/business.html
@@ -125,7 +125,6 @@
         <p>
             1.Overcrowding of tourist places of attraction<br>
             2.Inefficient travel and accommodation booking<br>
-            3. Difficulty in Itinerary Planning<br>
         </p><br>
         <a class="detail" href="../businesscases/Sneha.html">Details</a>
     </div>
@@ -133,9 +132,8 @@
     <div class="member-section">
         <h2>Disha.S(245)</h2>
         <p>
-            1.Inefficient travel and accommodation booking<br>
-            2.Transport issue for tourist<br>
-            3.Managing tourist safety <br>
+          1.Difficulty in itinerary planning<br>
+          2.Managing tourist safety<br> 
         </p><br>
         <a class="detail" href="../businesscases/Disha.html">Details</a>
     </div>
@@ -143,9 +141,8 @@
     <div class="member-section">
         <h2>Prateeksha.S (223)</h2>
         <p>
-            1.Difficulty in itinerary planning<br>
-            2.difficulty in language <br>
-            3.Overcrowding of tourist places of attraction<br>
+           1. transport issue for tourist<br>
+           2.Poor accessibility for tourists with special needs<br>
         </p><br>
         <a class="detail" href="../businesscases/Prateeksha.html">Details</a>
     </div>
