--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             <li>Our city plan for HAMSAGARH, situated in RAJKOT district in GUJART, features a well-rounded and sustainable urban design focusing on infrastructure, public services,monument preservation and environmental conservation.</li>
             <li>
                 <center>
-                    <img src="https://raw.githubusercontent.com/snehalb2005/PortfolioDemo.github.io/main/images/City.jpeg" alt="City Plan Image" width="80%">
+                    <img src="https://raw.githubusercontent.com/snehalb2005/sneha.github.io/main/images/City.jpeg" alt="City Plan Image" width="80%">
                 </center>
             </li>
         </ul>
@@ -156,7 +156,7 @@
         </div>
         <div class="team-container">
             <div class="team-member">
-                <img src="https://raw.githubusercontent.com/01fe23bcs187/Disha.github.io/main/Images/Disha (2).jpeg" alt="Team Member 1" class="profile-pic">
+                <img src="https://raw.githubusercontent.com/01fe23bcs187/Disha.github.io/main/Images/disha.jpeg" alt="Team Member 1" class="profile-pic">
                 <div class="member-info">
                     <p class="name">Disha V Sirsikar </p>
                     <p>USN: 01FE23BCS187</p>
@@ -168,7 +168,7 @@
             </div>
 
             <div class="team-member">
-                <img src="https://raw.githubusercontent.com/01fe23bcs186/PortfolioDemo.github.io/main/images/priyanka.jpeg" alt="Team Member 2" class="profile-pic">
+                <img src="https://raw.githubusercontent.com/01fe23bcs186/PortfolioDemo.github.io/main/images/prateeksha.jpeg" alt="Team Member 2" class="profile-pic">
                 <div class="member-info">
                     <p class="name">Prateeksha Shet</p>
                     <p>USN: 01FE23BCS177</p>
