--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
         </div>
         <div class="team-container">
             <div class="team-member">
-                <img src="https://raw.githubusercontent.com/01fe23bcs187/Disha.github.io/main/Images/disha.jpeg" alt="Team Member 1" class="profile-pic">
+                <img src="https://raw.githubusercontent.com/01fe23bcs187/Disha.github.io/main/images/disha.jpeg" alt="Team Member 1" class="profile-pic">
                 <div class="member-info">
                     <p class="name">Disha V Sirsikar </p>
                     <p>USN: 01FE23BCS187</p>
