--- a/index.html
+++ b/index.html
@@ -168,12 +168,12 @@
             </div>
 
             <div class="team-member">
-                <img src="https://raw.githubusercontent.com/01fe23bcs186/PortfolioDemo.github.io/main/images/prateeksha.jpeg" alt="Team Member 2" class="profile-pic">
+                <img src="https://raw.githubusercontent.com/Prateeksha-ps/prateeksha.github.io/main/images/prateeksha.jpeg" alt="Team Member 2" class="profile-pic">
                 <div class="member-info">
                     <p class="name">Prateeksha Shet</p>
                     <p>USN: 01FE23BCS177</p>
                     <div class="center-link">
-                          <a href="https://01fe23bcs182.github.io/.github.io/">Click Here to visit PRATEEKSHA's GitHub Page</a>
+                          <a href="https://prateeksha.github.io/.github.io/">Click Here to visit PRATEEKSHA's GitHub Page</a>
                     </div>
                     <p>ROLL NO: 223</p>
                 </div>
