--- a/index.html
+++ b/index.html
@@ -150,38 +150,46 @@
         </div>
     </section>
     
-    <section>
+     <section>
         <div>
-             <h2 id="meet">Meet My Team 🕵</h2>
+            <h2 id="meet">Meet My Team 🕵</h2>
         </div>
         <div class="team-container">
             <div class="team-member">
-                <img src="https://raw.githubusercontent.com/01fe23bcs187/Disha.github.io/main/images/disha.jpeg" alt="Team Member 1" class="profile-pic">
+                <img src="https://raw.githubusercontent.com/snehalb2005/sneha.github.io/main/images/sneha.jpeg" alt="Team Member 1" class="profile-pic">
                 <div class="member-info">
-                    <p class="name">Disha V Sirsikar </p>
+                    <p class="name">Sneha L Bagalkot </p>
+                    <p>USN: 01FE23BCS174</p>
+                    <p>ROLL NO: 240</p>
+                </div>
+            </div>
+
+            <div class="team-member">
+                <img src="https://raw.githubusercontent.com/Disha0029/disha.github.io/main/images/disha.jpeg" alt="Team Member 1" class="profile-pic">
+                <div class="member-info">
+                    <p class="name">Disha Sirsikar</p>
                     <p>USN: 01FE23BCS187</p>
-                     <div class="center-link">
-                          <a href=https://github.com/Disha0029.io/DAA-portfolio-Disha/">Click Here to visit DISHA's GitHub Page</a>
-                     </div>
                     <p>ROLL NO: 245</p>
                 </div>
             </div>
 
             <div class="team-member">
-                <img src="https://raw.githubusercontent.com/Prateeksha-ps/prateeksha.github.io/main/images/prateeksha.jpeg" alt="Team Member 2" class="profile-pic">
+                <img src="https://raw.githubusercontent.com/01fe23bcs182/.github.io/main/images/Vaishali.jpeg" alt="Team Member 3" class="profile-pic">
                 <div class="member-info">
-                    <p class="name">Prateeksha Shet</p>
+                    <p class="name">Prateeksha P Shet</p>
                     <p>USN: 01FE23BCS177</p>
-                    <div class="center-link">
-                          <a href="https://prateeksha.github.io/.github.io/">Click Here to visit PRATEEKSHA's GitHub Page</a>
-                    </div>
                     <p>ROLL NO: 223</p>
                 </div>
             </div>
-            
-
         </div>
+    </section>
+
+    <section>
+        <h2 style="color:rgb(34, 34, 211)">🌐 Find Me Online</h2>
+        <ul>
+            <li><a href="https://github.com/01fe23bcs182" target="_blank">GitHub</a></li>
+            <li><a href="https://linkedin.com/in/your-linkedin-profile" target="_blank">LinkedIn</a></li>
+        </ul>
     </section>
 </body>
 </html>
-
