--- a/index.html
+++ b/index.html
@@ -149,6 +149,7 @@
             </div>
         </div>
     </section>
+
     
      <section>
         <div>
@@ -165,7 +166,7 @@
             </div>
 
             <div class="team-member">
-                <img src="https://raw.githubusercontent.com/Disha0029/disha.github.io/main/images/disha.jpeg" alt="Team Member 1" class="profile-pic">
+                <img src="https://raw.githubusercontent.com/snehalb2005/sneha.github.io/main/images/disha.jpeg" alt="Team Member 2" class="profile-pic">
                 <div class="member-info">
                     <p class="name">Disha Sirsikar</p>
                     <p>USN: 01FE23BCS187</p>
@@ -174,7 +175,7 @@
             </div>
 
             <div class="team-member">
-                <img src="https://raw.githubusercontent.com/01fe23bcs182/.github.io/main/images/Vaishali.jpeg" alt="Team Member 3" class="profile-pic">
+                <img src="https://raw.githubusercontent.com/snehalb2005/sneha.github.io/main/images/prateeksha.jpeg" alt="Team Member 3" class="profile-pic">
                 <div class="member-info">
                     <p class="name">Prateeksha P Shet</p>
                     <p>USN: 01FE23BCS177</p>
