--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
     <section>
         <h2 style="color:rgb(34, 34, 211)">🌐 Find Me Online</h2>
         <ul>
-            <li><a href="https://github.com/01fe23bcs182" target="_blank">GitHub</a></li>
+            <li><a href="https://github.com/snehalb2005" target="_blank">GitHub</a></li>
             <li><a href="https://linkedin.com/in/your-linkedin-profile" target="_blank">LinkedIn</a></li>
         </ul>
     </section>
