--- a/blocks/home/home.html
+++ b/blocks/home/home.html
@@ -34,7 +34,7 @@
             <dt>Course Code</dt>
             <dd>24ECAP205</dd>
             <dt>Course Instructor</dt>
-            <dd>Arundhati Aralimatti</dd>
+            <dd>Ms.Vijaylaxmi V S </dd>
 
             <dt>University</dt>
             <dd>KLE Technological University</dd>
