--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
         </div>
         <div class="team-container">
             <div class="team-member">
-                <img src="https://raw.githubusercontent.com/snehalb2005/sneha.github.io/main/images/sneha.jpeg" alt="Team Member 1" class="profile-pic">
+                <img src="https://raw.githubusercontent.com/snehalb2005/sneha.github.io/main/images/sneha1.jpeg" alt="Team Member 1" class="profile-pic">
                 <div class="member-info">
                     <p class="name">Sneha L Bagalkot </p>
                     <p>USN: 01FE23BCS174</p>
