--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
     <section>
         <h2>City Design</h2>
         <ul>
-            <li><strong>Name of the city:</strong> <span>"AARAMBHA"</span></li>
+            <li><strong>Name of the city:</strong> <span>"HAMSAGARH"</span></li>
             <li>Our city plan for HAMSAGARH, situated in Rajkot district in Gujarat, features a well-rounded and sustainable urban design focusing on infrastructure, public services,monumental preservation and environmental conservation.</li>
             <li>
                 <center>
@@ -133,7 +133,7 @@
         </section>
         <section class="description">
             <div class="link-section">
-                <a class="custom-link" href="/PortfolioDemo.github.io/blocks/businesscases/business.html">Click Here to see the business cases</a>
+                <a class="custom-link" href="/sneha.github.io/blocks/businesscases/business.html">Click Here to see the business cases</a>
             </div>
         </section>
         
