--- a/blocks/businesscases/Disha.html
+++ b/blocks/businesscases/Disha.html
@@ -200,5 +200,8 @@
         <p><strong>SDG Indicator 8.6:</strong> Halve the number of global deaths and injuries from road traffic accidents.</p>
       </div>
     </div>
+      <div class="center-link">
+    <a href="../businesscases/dishacode.cpp" class="code">Click Here for Code Implementation</a>
+  </div>
 </body>
 </html>
