--- a/blocks/businesscases/Prateeksha.html
+++ b/blocks/businesscases/Prateeksha.html
@@ -202,6 +202,8 @@
       </div>
     </div>
 
-
+<div class="center-link">
+    <a href="../businesscases/prateekshacode.cpp" class="code">Click Here for Code Implementation</a>
+  </div>
 </body>
 </html>
